# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/storage_service/services/storage_space_manager/storage_space_manager.gni")

# 单元测试（ohos_unittest），与 OH 常见目录名 unittest 对齐
group("storage_space_manager_ut") {
  testonly = true
  deps = [ "${storage_space_manager_path}/test/unittest:storage_space_manager_ut" ]
}

# 模糊测试可执行文件，与 OH 常见目录名 fuzztest 对齐
group("storage_space_manager_fuzz") {
  testonly = true
  deps = [ "${storage_space_manager_path}/test/fuzztest:storage_space_manager_fuzztest" ]
}

# Mock 头与后续桩实现聚合（不单独产出用例二进制）
group("storage_space_manager_mock") {
  testonly = true
  deps = [ "${storage_space_manager_path}/test/mock:storage_space_manager_mock" ]
}

# 部件测试入口：UT + FUZZ（developer_test / CI 常引用此 group）
group("storage_space_manager_test") {
  testonly = true
  deps = [
    ":storage_space_manager_ut",
    ":storage_space_manager_fuzz",
  ]
}
