# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ohos_fuzztest("FileSystemCryptoFuzzTest") {
  module_out_path = "storage_service/storage_manager"
  fuzz_config_file =
      "${storage_service_path}/test/fuzztest/filesystemcrypto_fuzzer"
  include_dirs = [
    "${storage_manager_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${storage_service_common_path}/include",
    "${storage_daemon_path}/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${storage_manager_path}/crypto/filesystem_crypto.cpp",
    "${storage_manager_path}/storage_daemon_communication/src/storage_daemon_communication.cpp",
    "./filesystemcrypto_fuzzer.cpp",
  ]
  defines = [ "STORAGE_LOG_TAG = \"storage_service\"" ]
  deps = [ "${storage_daemon_path}/libfscrypt:libfscryptutils" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":FileSystemCryptoFuzzTest" ]
}
