# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

##############################fuzztest##########################################
ohos_fuzztest("KeyCtrlLoadVersionFuzzTest") {
  module_out_path = "storage_service/storage_service"
  fuzz_config_file = "${storage_service_path}/test/fuzztest/keycontrolloadversion_fuzzer"
  include_dirs = [ "${storage_daemon_path}/include/libfscrypt" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "${storage_service_path}/test/fuzztest/keycontrolloadversion_fuzzer/keycontrolloadversion_fuzzer.cpp" ]
  deps = [ "${storage_daemon_path}/libfscrypt:libfscryptutils" ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":KeyCtrlLoadVersionFuzzTest",
  ]
}
###############################################################################
