# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ohos_fuzztest("LibmtpDetectRawDevicesFuzzTest") {
  module_out_path = "storage_service/storage_service"
  fuzz_config_file = "${storage_service_path}/test/fuzztest/libmtpdetectrawdevices_fuzzer"

  cflags = [
    "-D_FILE_OFFSET_BITS=64",
    "-fstack-protector-strong",
    "-fno-omit-frame-pointer",
    "-g",
    "-O0",
    "-w",
    "-Wno-unused-variable",
  ]
  defines = []
  sources = [ "libmtpdetectrawdevices_fuzzer.cpp" ]
  deps = [ "${storage_daemon_path}:storage_common_utils" ]
  if (support_open_source_libmtp &&
      storage_service_external_storage_qos_trans) {
    external_deps = [
      "c_utils:utils",
      "libmtp:libmtp",
      "libusb:libusb",
    ]
  }
}

group("fuzztest") {
  testonly = true
  deps = [ ":LibmtpDetectRawDevicesFuzzTest" ]
}
