# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ohos_fuzztest("StorageManagerProviderGetFreeSizeFuzzTest") {
  module_out_path = "storage_service/storage_service/storage_manager"
  fuzz_config_file =
      "${storage_service_path}/test/fuzztest/storagemanagerprovidergetfreesize_fuzzer"
  include_dirs = [
    "${storage_service_common_path}/include",
    "${storage_manager_path}/include",
    "${storage_manager_path}/include/ipc",
    "${storage_daemon_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${storage_interface_path}/innerkits/storage_manager/native",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "${storage_service_path}/test/fuzztest/storagemanager_fuzzer/storagemanager_fuzzer.cpp" ]

  defines = [
    "STORAGE_LOG_TAG = \"storage_service\"",
    "private=public",
  ]
  deps = [
    "${storage_interface_path}/innerkits/storage_manager/native:storage_manager_header",
    "${storage_service_path}/services/storage_manager:storage_manager",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":StorageManagerFuzzTest" ]
}
