# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ohos_fuzztest("StorageTotalStatusServiceFuzzTest") {
  module_out_path = "storage_service/storage_service"
  fuzz_config_file =
      "${storage_service_path}/test/fuzztest/storagetotalstatusservice_fuzzer"
  include_dirs = [
    "${storage_service_common_path}/include",
    "${storage_manager_path}/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${storage_manager_path}/storage/src/storage_total_status_service.cpp",
    "${storage_manager_path}/utils/src/storage_utils.cpp",
    "./storagetotalstatusservice_fuzzer.cpp",
  ]
  defines = [ "STORAGE_LOG_TAG = \"storage_service\"" ]
  deps = [ "${bundlemanager_framework_path}/services/bundlemgr:libbms" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":StorageTotalStatusServiceFuzzTest" ]
}
