# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("public_config") {
  include_dirs = [ "." ]
}

config("private_config") {
  include_dirs = [
    "../../../../services/storage_manager/include",
    "../../../../services/storage_manager/include",
    "../../../../services/storage_daemon/include",
    "../../../../services/common/include",
  ]
}

ohos_shared_library("storage_manager_acl") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "../../../../services/storage_daemon/file_sharing/src/acl.cpp",
    "../../../../services/storage_daemon/file_sharing/src/setacl.cpp",
    "../../../../services/storage_daemon/utils/file_utils.cpp",
  ]

  defines = [
    "STORAGE_LOG_TAG = \"StorageManager\"",
    "LOG_DOMAIN = 0xD004300",
  ]

  configs = [ ":private_config" ]
  public_configs = [ ":public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "storage_service"
  subsystem_name = "filemanagement"
}
