# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

config("public_config") {
  include_dirs = [ "." ]
}

config("private_config") {
  include_dirs = [
    "${storage_manager_path}/include",
    "${storage_daemon_path}/include",
    "${storage_service_common_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
  ]
}

ohos_shared_library("storage_manager_acl") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "${storage_daemon_path}/file_sharing/src/acl.cpp",
    "${storage_daemon_path}/file_sharing/src/setacl.cpp",
    "${storage_daemon_path}/utils/file_utils.cpp",
    "${storage_daemon_path}/utils/storage_radar.cpp",
  ]

  defines = [
    "STORAGE_LOG_TAG = \"StorageManager\"",
    "LOG_DOMAIN = 0xD004300",
  ]

  configs = [ ":private_config" ]
  public_configs = [ ":public_config" ]

  cflags = [
    "-D_FORTIFY_SOURCE=2",
    "-fstack-protector-strong",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "hisysevent:libhisysevent"
  ]

  innerapi_tags = [ "chipsetsdk_sp_indirect" ]
  part_name = "storage_service"
  subsystem_name = "filemanagement"
}
