# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

config("public_config") {
  include_dirs = [ "." ]
}

config("private_config") {
  include_dirs = [
    "${storage_manager_path}/include",
    "${storage_service_path}/services/storage_daemon/include",
    "${storage_service_common_path}/include",
  ]
}

ohos_shared_library("storage_manager_sa_proxy") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "${storage_daemon_path}/ipc/src/storage_daemon_proxy.cpp",
    "${storage_manager_path}/innerkits_impl/src/bundle_stats.cpp",
    "${storage_manager_path}/innerkits_impl/src/disk.cpp",
    "${storage_manager_path}/innerkits_impl/src/storage_manager_proxy.cpp",
    "${storage_manager_path}/innerkits_impl/src/storage_stats.cpp",
    "${storage_manager_path}/innerkits_impl/src/volume_core.cpp",
    "${storage_manager_path}/innerkits_impl/src/volume_external.cpp",
    "${storage_manager_path}/utils/src/storage_utils.cpp",
  ]

  defines = [
    "STORAGE_LOG_TAG = \"StorageManager\"",
    "LOG_DOMAIN = 0xD004300",
  ]

  configs = [ ":private_config" ]
  public_configs = [ ":public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
  ]

  part_name = "storage_service"
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "filemanagement"
}
